modify: Billing & creedit include docs
